# Scheme-Compiler

./: .gitignore  CMakeLists.txt  README.md  bigger_test.scm  hash_function.c  scanner  scanner.c  scanner_switch  scanner_switch.c  test.scm  token_types.h
hash_table/: generate-hash.sh  hash_function.c  scheme_keywords.gperf  scheme_keywords_hash.c  scheme_keywords_hash.h  scheme_tokens.h
include/analyzer/: analyzer.h  symbol_table.h
include/codegen/: codegen.h
include/parser/: parser.h
include/scanner/: scanner.h  token.h
include/utils/: buffer.h  error.h  hash.h  memory.h
include/vm/: debug.h  instruction.h  table.h  value.h  vm.h
src/: main.c
src/analyzer/: analyzer.c  symbol_table.c
src/codegen/: codegen.c
src/parser/: parser.c
src/scanner/: scanner.c  token.c
src/utils/: buffer.c  error.c  hash.c  memory.c
src/vm/: debug.c  instruction.c  memory.c  table.c  value.c  vm.c
